tests/snapshots/sfc/ts/basic__computed_and_watch.snap
---
source: crates/vize_atelier_sfc/src/snapshot_tests.rs
expression: ts_output.as_str()
---
import { defineComponent as _defineComponent } from 'vue'
import { toDisplayString as _toDisplayString, openBlock as _openBlock, createElementBlock as _createElementBlock } from "vue"

import { ref, computed, watch } from 'vue'


export default /*@__PURE__*/_defineComponent({
  __name: 'test',
  setup(__props) {

const count = ref(0)
const double = computed(() => count.value * 2)
watch(count, (n) => console.log(n))

return (_ctx: any,_cache: any) => {
  return (_openBlock(), _createElementBlock("div", null, _toDisplayString(double.value), 1 /* TEXT */))
}
}

})
