tests/snapshots/sfc/ts/basic__defineemits.snap
---
source: crates/vize_atelier_sfc/src/snapshot_tests.rs
expression: ts_output.as_str()
---
import { defineComponent as _defineComponent } from 'vue'
import { openBlock as _openBlock, createElementBlock as _createElementBlock } from "vue"


export default /*@__PURE__*/_defineComponent({
  __name: 'test',
  emits: ['update'],
  setup(__props, { emit: __emit }) {

const emit = __emit
function onClick() {
  emit('update', 1)
}

return (_ctx: any,_cache: any) => {
  return (_openBlock(), _createElementBlock("button", { onClick: onClick }, "Click"))
}
}

})
