tests/snapshots/sfc/ts/basic__script_and_template.snap
---
source: crates/vize_atelier_sfc/src/snapshot_tests.rs
assertion_line: 175
expression: ts_output.as_str()
---
import { openBlock as _openBlock, createElementBlock as _createElementBlock } from "vue"

function _sfc_render(_ctx, _cache) {
  return (_openBlock(), _createElementBlock("div", null, "Component"))
}

const _sfc_main = { name: 'MyComponent' }

_sfc_main.render = _sfc_render
export default _sfc_main
