tests/snapshots/sfc/ts/basic__script_setup_function_handler.snap
---
source: crates/vize_atelier_sfc/src/snapshot_tests.rs
expression: ts_output.as_str()
---
import { defineComponent as _defineComponent } from 'vue'
import { openBlock as _openBlock, createElementBlock as _createElementBlock } from "vue"

const count = 0

export default /*@__PURE__*/_defineComponent({
  __name: 'test',
  setup(__props) {

function onClick() {
  console.log(count)
}

return (_ctx: any,_cache: any) => {
  return (_openBlock(), _createElementBlock("button", { onClick: onClick }, "Click"))
}
}

})
